ocfstatic/ocfstatic_Service_ocfstatic.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocfstatic
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    transpire.ocf.io/deployment: ocfstatic
